ecmascript/parser/tests/test262-error-references/fail/d83b095618ef4c4f.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/d83b095618ef4c4f.js:1:7
  |
1 | class extends A{}
  |       ^^^^^^^

